8148175: C1: G1 barriers don't preserve FP registers

Reviewed-by: kvn